--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 <body>
 
-    <h2 id="judul">Calculator By Hafidh</h2>
+    <h2 id="judul">Calculator By Hafidh M</h2>
 
     <div class="container">
         <div class="kalkulator">
